--- a/CapSpotNuevo/HTML/catalogo.html
+++ b/CapSpotNuevo/HTML/catalogo.html
@@ -21,6 +21,7 @@
       <a href="/CapSpotNuevo/HTML/index.html">Sobre Nosotros</a>
       <a href="#catalogo">Catálogo</a>
       <a href="#footer">Contacto</a>
+      <a href="/CapSpotNuevo/HTML/nba.html">Noticias NBA</a>
     </nav>
     <div class="barra-iconos">
       <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/gmail.png" alt="Correo" class="icono-barra">
