--- a/CapSpotNuevo/HTML/catalogo.html
+++ b/CapSpotNuevo/HTML/catalogo.html
@@ -36,10 +36,10 @@
             New York Knicks con esta gorra en color negro, perfecta para los verdaderos fanáticos del equipo. Su diseño sobrio y elegante resalta con el logo bordado en azul y naranja.
         </p>
         <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/new-york-knicks-logo-transparent.png" class="logo knicks anim">
-        <div class="group">
+      <div class="group">
             <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/podio.webp" class="podio anim">
             <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/gorraKnicks.webp" class="gorra knicks anim">
-        </div>
+        </div>  
     <div class="Caja-gorra">
         <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/podio.webp" alt="" class="podio-bulls anim">
         <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/bullsGora.png" alt="" class="gorra-bulls anim">
@@ -312,10 +312,10 @@
     <div class="footer-links">
       <h4>Enlaces rápidos</h4>
       <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Catálogo</a></li>
-        <li><a href="#">Sobre Nosotros</a></li>
-        <li><a href="#">Contacto</a></li>
+        <li><a href="#promociones">Inicio</a></li>
+        <li><a href="/CapSpotNuevo/HTML/catalogo.html">Catálogo</a></li>
+        <li><a href="/CapSpotNuevo/HTML/index.html">Sobre Nosotros</a></li>
+        <li><a href="https://wa.me/82371397">Contacto</a></li>
       </ul>
     </div>
 
