--- a/CapSpotNuevo/HTML/index.html
+++ b/CapSpotNuevo/HTML/index.html
@@ -30,7 +30,7 @@
     </div>
   </div>
 </header>
-    <section class="Header">
+    <section class="Header" id="header">
         <img src="/CapSpotNuevo/Imagenes/imagenes/canchaPortada.jpg" alt="Cancha" class="Cancha fondo activo" id="fondo1"/>
         <div class="content">
             <h1 class="titulo1">Lleva tu estilo a otro nivel</h1>
@@ -94,10 +94,10 @@
     <div class="footer-links">
       <h4>Enlaces rápidos</h4>
       <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Catálogo</a></li>
-        <li><a href="#">Sobre Nosotros</a></li>
-        <li><a href="#">Contacto</a></li>
+        <li><a href="#header">Inicio</a></li>
+        <li><a href="/CapSpotNuevo/HTML/catalogo.html">Catálogo</a></li>
+        <li><a href="#header">Sobre Nosotros</a></li>
+        <li><a href="https://wa.me/82371397">Contacto</a></li>
       </ul>
     </div>
 
