--- a/CapSpotNuevo/HTML/catalogo.html
+++ b/CapSpotNuevo/HTML/catalogo.html
@@ -31,18 +31,18 @@
   </div>
 </header>
     <section class="Promociones" id="promociones">
-        <img src="/CapSpotNuevo/Imagenes/imagenes/CanchaFo.jpeg"  class="Fondo anim">
-        <p>
+        <img src="/CapSpotNuevo/Imagenes/imagenes/CanchaFo.jpeg"  class="Fondo anim" id="fondo">
+        <p id="descripcion-promocion" class="Parafo">
             New York Knicks con esta gorra en color negro, perfecta para los verdaderos fanáticos del equipo. Su diseño sobrio y elegante resalta con el logo bordado en azul y naranja.
         </p>
-        <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/new-york-knicks-logo-transparent.png" class="logo knicks anim">
+        <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/new-york-knicks-logo-transparent.png" id="Logo" class="logo knicks anim">
       <div class="group">
-            <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/podio.webp" class="podio anim">
-            <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/gorraKnicks.webp" class="gorra knicks anim">
+            <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/podio.webp" class="podio anim" id="Podio">
+            <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/gorraKnicks.webp" class="gorra knicks anim" id="Gorra-Mostrador">
         </div>  
     <div class="Caja-gorra">
-        <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/podio.webp" alt="" class="podio-bulls anim">
-        <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/bullsGora.png" alt="" class="gorra-bulls anim">
+        <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/podio.webp" alt="" class="podio-bulls anim" id="Podio" >
+        <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/bullsGora.png" alt="" class="gorra-bulls anim" id="Gorra-caja">
     </div>
     <div class="Circulo">
         <div class="triangulo"></div>
@@ -215,7 +215,6 @@
     <button class="carousel-button next" aria-label="Siguiente">&rarr;</button>
   </div>
 
-  <!-- Mensaje cuando no hay resultados tras filtrar -->
   <div id="noResultsMsg" class="no-results" style="display: none; text-align:center; margin-top:20px;">
     No se encontraron gorras que coincidan con los filtros.
   </div>
@@ -346,6 +345,7 @@
 </div>
 <script src="/CapSpotNuevo/Jvs/AnimacionesGorras.js"></script>
 <script src="/CapSpotNuevo/Jvs/AnimacionCatalogo.js"></script>
+<script src="/CapSpotNuevo/Jvs/Promociones.js"></script>
 <script src="/CapSpotNuevo/Jvs/catalogo.js"></script>
 <script src="/CapSpotNuevo/Jvs/cuenta.js"></script>
 <script src="/CapSpotNuevo/Jvs/carrito.js"></script>
