CatalogoV4 Probablemente finalr

--- a/CapSpotNuevo/HTML/catalogo.html
+++ b/CapSpotNuevo/HTML/catalogo.html
@@ -41,8 +41,8 @@
             <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/gorraKnicks.webp" class="gorra knicks anim" id="Gorra-Mostrador">
         </div>  
     <div class="Caja-gorra">
-        <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/podio.webp" alt="" class="podio-bulls anim" id="Podio" >
-        <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/bullsGora.png" alt="" class="gorra-bulls anim" id="Gorra-caja">
+        <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/podio.webp" alt="" class="podio-bulls anim" id="Podio-Caja" >
+        <img src="/CapSpotNuevo/Imagenes/imagenes/Catalogo/bullsGora.png" alt="" class="gorra-bulls anim" id="Gorra-Caja">
     </div>
     <div class="Circulo">
         <div class="triangulo"></div>
@@ -80,7 +80,6 @@
         <option value="Snapback">Snapback</option>
         <option value="Trucker">Trucker</option>
         <option value="Limited">Edición Limitada</option>
-        <!-- Ajusta variantes según tu catálogo real -->
       </select>
     </label>
   </div>
